--- a/index.html
+++ b/index.html
@@ -786,6 +786,9 @@
 
     <script>
         // Initialize Firebase with your project configuration
+        require('dotenv').config();
+        const githubToken = process.env.FIREBASE_API_KEY;
+        console.log(githubToken);
         const firebaseConfig = {
             apiKey: "AIzaSyDmry_TCDskOsI8tfKPAw3TKWQwCP-ijIE",
             authDomain: "sms-scheduler-6adc9.firebaseapp.com",
