- add github env

--- a/index.html
+++ b/index.html
@@ -786,7 +786,7 @@
 
     <script>
         // Initialize Firebase with your project configuration
-        require('dotenv').config();
+        // require('dotenv').config();
         const githubToken = process.env.FIREBASE_API_KEY;
         console.log(githubToken);
         const firebaseConfig = {
