--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <meta content="" name="description">
 
     <!-- Favicon -->
-    <link href="img/favicon.ico" rel="icon">
+    <!-- <link href="img/favicon.ico" rel="icon"> -->
 
     <!-- Google Web Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -780,15 +780,14 @@
     <!-- Firebase  -->
     <script src="https://www.gstatic.com/firebasejs/9.0.2/firebase-app-compat.js"></script>
     <script src="https://www.gstatic.com/firebasejs/9.0.2/firebase-firestore-compat.js"></script>
-
+    <script src="https://cdn.jsdelivr.net/npm/path-key@4.0.0/index.min.js"></script>
     <!-- Template Javascript -->
     <script src="js/main.js"></script>
 
     <script>
-        // Initialize Firebase with your project configuration
-        // require('dotenv').config();
-        const githubToken = process.env.FIREBASE_API_KEY;
-        console.log(githubToken);
+        console.log('process.env', process.env)
+        const PATH = process.env["FIREBASE_API_KEY"];
+        console.log('PATH', PATH)
         const firebaseConfig = {
             apiKey: "AIzaSyDmry_TCDskOsI8tfKPAw3TKWQwCP-ijIE",
             authDomain: "sms-scheduler-6adc9.firebaseapp.com",
